footnote for the non-aligning detectors (exaggerated case) corrected

--- a/three_detectors_model.ipynb
+++ b/three_detectors_model.ipynb
@@ -653,20 +653,20 @@
    "id": "dd20aef0",
    "metadata": {},
    "source": [
-    "With the detectors not exactly aligning (simple case, but unrealistic)"
+    "With the detectors not exactly aligning (exaggerated case)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9186f7de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the detectors are twenty degrees apart, \n",
+    "# the detectors are 40 degrees apart, \n",
     "# we take the first detector as reference, \n",
-    "# the second 20 degrees behind, \n",
-    "# and the third 40 degreeds behind."
+    "# the second 40 degrees behind, \n",
+    "# and the third 80 degreeds behind."
    ]
   },
   {
