removed redundant code

--- a/three_detectors_model.ipynb
+++ b/three_detectors_model.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "8cf75a7d",
    "metadata": {},
    "outputs": [],
@@ -687,15 +687,13 @@
     "                    P_2[i*N_t+row][col-i*10] = 1\n",
     "                else: \n",
     "                    P_2[i*N_t+row][N_p+(col-i*10)] = 1\n",
-    "            else:\n",
-    "                P_2[i*N_t+row][col-i*10] = 0\n",
     "            \n",
     "P_2 = np.array(P_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "id": "220b36c7",
    "metadata": {},
    "outputs": [
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "8eda112a",
    "metadata": {},
    "outputs": [
@@ -751,17 +749,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 36,
    "id": "56e555c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1690e9950>]"
+       "[<matplotlib.lines.Line2D at 0x30d338b90>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -782,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "id": "f1edb968",
    "metadata": {},
    "outputs": [
@@ -809,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "id": "35195685",
    "metadata": {},
    "outputs": [
@@ -841,7 +839,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sample: 100%|██████████| 200/200 [00:01<00:00, 125.59it/s, 127 steps of size 1.94e-02. acc. prob=0.80]\n"
+      "sample: 100%|██████████| 200/200 [00:01<00:00, 126.28it/s, 127 steps of size 1.94e-02. acc. prob=0.80]\n"
      ]
     }
    ],
@@ -861,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "id": "b0c1c449",
    "metadata": {},
    "outputs": [
@@ -880,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "id": "dc256ef8",
    "metadata": {},
    "outputs": [
@@ -890,7 +888,7 @@
        "(100, 25)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "8add0302",
    "metadata": {},
    "outputs": [
@@ -935,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "dbae91a8",
    "metadata": {},
    "outputs": [
