plot for checking shift in jax language

--- a/moving_signals.ipynb
+++ b/moving_signals.ipynb
@@ -221,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 139,
    "id": "597134d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15848a350>]"
+       "[<matplotlib.lines.Line2D at 0x318933390>]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     },
